--- a/sandbox/DB_accounts.ipynb
+++ b/sandbox/DB_accounts.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "18a46e69",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1cbb96f2",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "15380637",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "[<Account: checking assets>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bfa0477b",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "[<Account: expenses:food expenses>, <Account: groceries expenses>, <Account: restaurant expenses>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1d119a3b",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a3d355fa",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        " 'yoyodyne'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "407030b5",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
        " 'yard'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b5c4ffb7",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "50b57f94",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        " 'visa': ['liabilities:chase:visa']}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "64ee2810",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
        " 'expenses:travel']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "e12e2342",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
        "19"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "f94b5e3d",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "e3598394",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
        " 'travel': ['expenses:travel']}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "9fcdd8fa",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
        "20"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "b0f1d649",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "['expenses:car', 'expenses:car:payment', 'expenses:car:fuel']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "3f3728e5",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
        " 'liabilities:chase:visa']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "a2e618ef",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
        " 'expenses:travel']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "5979c1e1",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "['expenses.*']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "8f0125de",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
        " 'expenses:travel.*']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "779e599d",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
        " 'expenses:travel']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "e4892099",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
        "['expenses:food', 'expenses:food:groceries', 'expenses:food:restaurant']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "d93c1063",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
        "['expenses:food.*']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "9ae15eb0",
    "metadata": {},
    "outputs": [
@@ -698,7 +698,7 @@
        "['expenses:food', 'expenses:food:groceries.*', 'expenses:food:restaurant.*']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "e489a913",
    "metadata": {},
    "outputs": [
@@ -740,7 +740,7 @@
        " 'income:interest']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "e6fd9f32",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
        "['expenses.*', 'income.*']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "7770e67f",
    "metadata": {},
    "outputs": [
@@ -790,7 +790,7 @@
        " 'income:interest.*']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,8 +801,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "feb1af54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Account: groceries expenses>]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Account.objects(name__exact='expenses:food:groceries')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "98eef2ba",
    "metadata": {},
    "outputs": [
     {
@@ -817,33 +838,12 @@
     }
    ],
    "source": [
-    "Account.objects(name__exact='expenses:food:groceries')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "98eef2ba",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Account: groceries expenses>]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "Account.objects(abbrev__exact='groceries')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "e1e1193a",
    "metadata": {},
    "outputs": [],
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "280e8ed5",
    "metadata": {},
    "outputs": [
@@ -872,8 +872,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "b635d25b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'expenses:food:groceries'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.fullname('expenses:food:groceries')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ca0a4ad0",
    "metadata": {},
    "outputs": [
     {
@@ -888,33 +909,12 @@
     }
    ],
    "source": [
-    "DB.fullname('expenses:food:groceries')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "ca0a4ad0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'expenses:food:groceries'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "DB.fullname('groceries')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "9c0dc81e",
    "metadata": {},
    "outputs": [],
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "8783cf29",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
        "<Account: checking assets>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "id": "b3e0d8a7",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
        "<Account: checking assets>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "id": "2c348a73",
    "metadata": {},
    "outputs": [],
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "id": "777e6a46",
    "metadata": {},
    "outputs": [
@@ -994,7 +994,7 @@
        "dexter.DB.DoesNotExist"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "id": "4f74f71c",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1015,7 @@
        "<Account: equity equity>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "id": "e697a234",
    "metadata": {},
    "outputs": [],
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "id": "d9fa3f21",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1052,7 @@
        "'checking'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "id": "a42cfec6",
    "metadata": {},
    "outputs": [
@@ -1073,13 +1073,37 @@
        "'assets:bank:whatever'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "abbrev('assets:bank:whatever')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "0c9de8c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MultipleObjectsReturned",
+     "evalue": "2 or more items returned, instead of 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mMultipleObjectsReturned\u001b[39m                   Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[43]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mabbrev\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mexpenses:personal:bob\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[40]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36mabbrev\u001b[39m\u001b[34m(a)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mabbrev\u001b[39m(a):\n\u001b[32m      2\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m         acct = \u001b[43mAccount\u001b[49m\u001b[43m.\u001b[49m\u001b[43mobjects\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m=\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m         res = acct.abbrev\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m Account.DoesNotExist:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/3.13.1/envs/nosql/lib/python3.13/site-packages/mongoengine/queryset/base.py:286\u001b[39m, in \u001b[36mBaseQuerySet.get\u001b[39m\u001b[34m(self, *q_objs, **query)\u001b[39m\n\u001b[32m    283\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[32m    285\u001b[39m \u001b[38;5;66;03m# If we were able to retrieve the 2nd doc, raise the MultipleObjectsReturned exception.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m286\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m queryset._document.MultipleObjectsReturned(\n\u001b[32m    287\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33m2 or more items returned, instead of 1\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    288\u001b[39m )\n",
+      "\u001b[31mMultipleObjectsReturned\u001b[39m: 2 or more items returned, instead of 1"
+     ]
+    }
+   ],
+   "source": [
+    "abbrev('expenses:personal:bob')"
    ]
   },
   {
