--- a/sandbox/DB_accounts.ipynb
+++ b/sandbox/DB_accounts.ipynb
@@ -1155,6 +1155,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 128,
+   "id": "cda84998",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "assets:bank:checking :bank:checking 2\n",
+      "assets:bank:savings :bank:savings 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expand_node('assets',1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
    "id": "74181117",
    "metadata": {},
@@ -1194,6 +1223,12 @@
    "source": [
     "re.match(r'(.*):(\\d+)','expenses:car:10').groups()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5796b28",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1476,6 +1511,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 130,
+   "id": "547ce681",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = account_args('expenses:')['account__regex']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "54ae8e8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "expenses:car\n",
+      "expenses:car:payment\n",
+      "expenses:car:fuel\n",
+      "expenses:entertainment\n",
+      "expenses:food\n",
+      "expenses:food:groceries\n",
+      "expenses:food:restaurant\n",
+      "expenses:home\n",
+      "expenses:home:mortgage\n",
+      "expenses:home:household\n",
+      "expenses:home:utility\n",
+      "expenses:home:yard\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in Account.objects:\n",
+    "    if re.match(e, a.name):\n",
+    "        print(a.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "id": "8b3e75f1",
    "metadata": {},
@@ -1706,9 +1782,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4cc7e364",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "35488c1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<En 2024-04-15 liabilities:chase:visa -$25.0 []>\n",
+      "<En 2024-04-15 liabilities:chase:visa +$489.73 []>\n",
+      "<En 2024-04-15 assets:bank:checking -$489.73 []>\n",
+      "<En 2024-04-05 assets:bank:checking -$300.0 []>\n",
+      "<En 2024-04-05 assets:bank:savings +$300.0 []>\n",
+      "<En 2024-04-15 expenses:home:household +$25.0 []>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in Entry.objects:\n",
+    "    if e.tref is None:\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "e5caac9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['expenses:car', 'expenses:entertainment', 'expenses:food', 'expenses:home']"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.account_glob('expenses:1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "7b344160",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.account_glob('assets:1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "67efb599",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['expenses:food:groceries']"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.account_glob('groceries')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35488c1f",
+   "id": "4ed6d5e9",
    "metadata": {},
    "outputs": [],
    "source": []
